<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main_activity"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tddd80application.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_own_questions"
        android:name="com.example.tddd80application.ui.ownquestions.OwnQuestionsFragment"
        android:label="@string/title_my_questions"
        tools:layout="@layout/fragment_own_questions" />

    <fragment
        android:id="@+id/navigation_other_users"
        android:name="com.example.tddd80application.ui.users.OtherUsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_other_users" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tddd80application.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>