<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_question_view_background_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    android:layout_marginTop="3dp"
    android:background="@color/colorSurface">

    <TextView
        android:id="@+id/recycler_question_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:scrollHorizontally="false"
        android:singleLine="true"
        android:text="@string/recycler_question_title_placeholder"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_question_author_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/recycler_question_author_placeholder"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_title_text_view" />

    <TextView
        android:id="@+id/recycler_question_timestamp_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:singleLine="true"
        android:text="@string/recycler_question_timestamp_placeholder"
        android:textColor="@color/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_question_author_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_title_text_view" />

    <TextView
        android:id="@+id/recycler_question_course_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/recycler_question_course_placeholder"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_author_text_view" />

    <TextView
        android:id="@+id/recycler_question_body_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/recycler_question_body_placeholder"
        android:textColor="@color/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_course_text_view" />

    <Button
        android:id="@+id/recycler_question_like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/recycler_question_like_button_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_body_text_view" />

    <TextView
        android:id="@+id/recycler_question_likes_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:singleLine="true"
        android:text="@string/recycler_question_likes_header"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_question_like_button"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_body_text_view" />

    <TextView
        android:id="@+id/recycler_question_likes_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/recycler_question_likes_placeholder"
        android:textColor="@color/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_question_likes_header"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_body_text_view" />

    <TextView
        android:id="@+id/recycler_question_answers_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:singleLine="true"
        android:text="@string/recycler_question_answers_header"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_question_likes_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_body_text_view" />

    <TextView
        android:id="@+id/recycler_question_answers_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/recycler_question_answers_placeholder"
        android:textColor="@color/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_question_answers_header"
        app:layout_constraintTop_toBottomOf="@+id/recycler_question_body_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>