<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_registration_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.registration.RegistrationFragment" >

    <ScrollView
        android:id="@+id/fragment_registration_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_registration_scroll_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment_registration_header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fragment_registration_header_text"
                android:textAlignment="center"
                android:textColor="@color/colorOnBackground"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_registration_username_input_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="35dp"
                android:text="@string/fragment_registration_username_input_hint"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintStart_toStartOf="@+id/fragment_registration_username_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_header_text_view" />

            <EditText
                android:id="@+id/fragment_registration_username_input_edit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_fragment_background_selector"
                android:ems="10"
                android:hint="@string/fragment_registration_username_input_hint"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textColor="@color/colorOnBackground"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username_input_text_view" />

            <TextView
                android:id="@+id/fragment_registration_username_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment_registration_username_error"
                android:textColor="@color/colorError"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/fragment_registration_username_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username_input_edit" />

            <TextView
                android:id="@+id/fragment_registration_email_input_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment_registration_email_input_hint"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintStart_toStartOf="@+id/fragment_registration_email_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username_error_text_view" />

            <EditText
                android:id="@+id/fragment_registration_email_input_edit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_fragment_background_selector"
                android:ems="10"
                android:hint="@string/fragment_registration_email_input_hint"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorOnBackground"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_email_input_text_view" />

            <TextView
                android:id="@+id/fragment_registration_email_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment_registration_email_error"
                android:textColor="@color/colorError"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/fragment_registration_email_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_email_input_edit" />

            <TextView
                android:id="@+id/fragment_registration_password_input_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment_registration_password_input_hint"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintStart_toStartOf="@+id/fragment_registration_password_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_email_error_text_view" />

            <EditText
                android:id="@+id/fragment_registration_password_input_edit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_fragment_background_selector"
                android:ems="10"
                android:hint="@string/fragment_registration_password_input_hint"
                android:inputType="textNoSuggestions|textPassword"
                android:singleLine="true"
                android:textColor="@color/colorOnBackground"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_input_text_view" />

            <TextView
                android:id="@+id/fragment_registration_password_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment_registration_password_confirmation_error"
                android:textColor="@color/colorError"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/fragment_registration_password_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_input_edit" />

            <TextView
                android:id="@+id/fragment_registration_password_confirmation_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment_registration_password_confirmation_hint"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintStart_toStartOf="@+id/fragment_registration_password_confirmation_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_error_text_view" />

            <EditText
                android:id="@+id/fragment_registration_password_confirmation_input_edit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_fragment_background_selector"
                android:ems="10"
                android:hint="@string/fragment_registration_password_input_hint"
                android:inputType="textNoSuggestions|textPassword"
                android:singleLine="true"
                android:textColor="@color/colorOnBackground"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_confirmation_input_label" />

            <TextView
                android:id="@+id/fragment_registration_password_confirmation_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment_registration_password_confirmation_error"
                android:textColor="@color/colorError"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/fragment_registration_password_confirmation_input_edit"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_confirmation_input_edit" />

            <Button
                android:id="@+id/fragment_registration_register_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:background="@color/colorSecondary"
                android:text="@string/fragment_registration_register_account_button_text"
                android:textColor="@color/colorOnSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_confirmation_error_text_view" />

            <Button
                android:id="@+id/fragment_registration_back_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:text="@string/fragment_registration_back_to_login_button_text"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_registration_register_account_button"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
